infrastructure/application/security.tf
resource "aws_security_group" "application_sg" {
  name = "application_sg_${random_id.random.dec}"
  description = "Allow jenkins to connect to application server"
  vpc_id = data.terraform_remote_state.networking.outputs.vpc_id

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_security_group_rule" "ingress_ssh_jenkins" {
  type = "ingress"
  from_port = 22
  to_port = 22
  protocol = "tcp"
  source_security_group_id = data.terraform_remote_state.networking.outputs.public_sg_id
  security_group_id = aws_security_group.application_sg.id
}

resource "aws_security_group_rule" "ingress_main_jenkins" {
  type = "ingress"
  from_port = 8080
  to_port = 8080
  protocol = "tcp"
  source_security_group_id = data.terraform_remote_state.networking.outputs.public_sg_id
  security_group_id = aws_security_group.application_sg.id
}
